[gd_scene load_steps=7 format=2]

[ext_resource path="res://Recursos/PNG/Enemies/spikeMan_walk1.png" type="Texture" id=1]
[ext_resource path="res://Recursos/PNG/Enemies/spikeMan_walk2.png" type="Texture" id=2]
[ext_resource path="res://Juego/Enemigos/Enemigo1.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "correr",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23, 4 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 40.0
height = 24.0

[node name="Pinchon" type="KinematicBody2D"]
position = Vector2( 2, -40 )
scale = Vector2( 0.5, 0.5 )
z_index = 35
collision_layer = 4
collision_mask = 2
script = ExtResource( 3 )

[node name="CorrerAnimacion" type="AnimatedSprite" parent="."]
position = Vector2( -4, 2 )
frames = SubResource( 1 )
animation = "correr"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, 76 )
shape = SubResource( 2 )

[node name="DetectarVacio" type="RayCast2D" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 50, 75 )
enabled = true
collision_mask = 32

[node name="DetectarPared" type="RayCast2D" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 42, 24 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 32

[node name="DetectarJugador" type="Area2D" parent="."]
visible = false
collision_layer = 68
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectarJugador"]
polygon = PoolVector2Array( -4, -26, 8, -26, -4, -70, -4, -70, -16, -26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectarJugador"]
modulate = Color( 0.137255, 0.223529, 0, 1 )
position = Vector2( -4, 24 )
shape = SubResource( 3 )

[connection signal="body_entered" from="DetectarJugador" to="." method="_on_DetectarJugador_body_entered"]
